# NewsApiTracker

./: .env.example  .gitignore  README.md  cli.py  consts.py  docker-compose.yml  pyproject.toml
Libs/: Models.py  PydanticHelpers.py
Libs/LocalHelpers/: PathHelpers.py  PydanticHelpers.py
Scripts/: generate_one_time_data.py  parse_data.py
Storage/: 2026-01-19_21-09-33.txt
libs/: db_helpers.py
libs/sentiment_analysis/: __init__.py  absa.py  base.py  llm.py
redis/: redis.Dockerfile
scripts/: full_job.py  generate_and_parse.py  generate_one_time_data.py  initialize_database.py  parse_data.py  scheduled_job.py
scripts/modular/: __init__.py  generate_one_time_data.py  parse_data.py
services/: docker-compose.yml
services/timescale_db/: init.sql  pg_hba.conf  setup_pg_hba.sh
src/: cli.py
src/libs/: db_helpers.py
src/libs/sentiment_analysis/: __init__.py  absa.py  llm.py
src/scripts/: full_job.py  initialize_database.py  scheduled_job.py
src/scripts/modular/: __init__.py  generate_one_time_data.py  parse_data.py
visual/: database_visualizer.py
visual/database/: README.md  database_visualizer.py
visual/sa_accuracy/: README.md  compare_accuracy.py  generate_tests.py  tests.json  topic_helpers.py
